# jesusIsSaviorCrawler

./: .env  .gitignore  Cargo.toml  README.md  crawler_dir_listing.txt  proxies.txt  schema.json  scraper_cache.json  scraper_progress.json  urls.txt
src/: lib.rs  markdown_flattener.rs  scrape_url.rs
ui/: package-lock.json  package.json
ui/public/: posts.json  schema.json
ui/src/: App.css  App.tsx  EnhancedApp.css  EnhancedApp.tsx
